Cerate scripts to run auth-service both from IntelliJ and from Docker